fix(ZNTA-2697) remove extra spacing from dashboard lists

--- a/server/zanata-frontend/src/app/styles/frontend-jsf.less
+++ b/server/zanata-frontend/src/app/styles/frontend-jsf.less
@@ -20,6 +20,9 @@ body.bodyStyle {
   h1.l--push-all-0 {
     line-height: initial !important;
   }
+  .list__item__content .projectList {
+    padding-bottom: 0 !important;
+  }
   #copy-trans-modal {
     .button--group input[type="radio"] + .button--success {
       color: @success-color !important;
